<?xml version="1.0"?>
<package format="2">
  <name>henes_car_control</name>
  <version>0.0.0</version>
  <description>The henes_car_control package</description>

  <maintainer email="itm1103@todo.todo">itm1103</maintainer>
  <license>TODO</license>

  <!-- 의존성 목록 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend> <!-- 추가된 의존성 -->
  <build_depend>nav_msgs</build_depend> <!-- 추가된 의존성 -->
  <build_depend>tf</build_depend> <!-- 추가된 의존성 -->

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend> <!-- 추가된 의존성 -->
  <build_export_depend>nav_msgs</build_export_depend> <!-- 추가된 의존성 -->
  <build_export_depend>tf</build_export_depend> <!-- 추가된 의존성 -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend> <!-- 추가된 의존성 -->
  <exec_depend>nav_msgs</exec_depend> <!-- 추가된 의존성 -->
  <exec_depend>tf</exec_depend> <!-- 추가된 의존성 -->

</package>
